# dw_do_zero

./: .gitignore  .user.yml  README.md  docker-compose.yaml  profiles.yml  pyproject.toml
dw_zero/: .env copy  extract_load.py
dw_zero_dbt/: .user.yml  dbt_project.yml
dw_zero_dbt/docs/: homepage.md
dw_zero_dbt/models/: schema.yml
dw_zero_dbt/models/mart/: _schema.yml  dm_commodities.sql
dw_zero_dbt/models/staging/: _schema.yml  stg__commodities.sql  stg__movimentacao.sql
